tests/codegen/errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.empty.block/reader-periodic-decimal-empty-block.mon
;; TEST-ID: tests.codegen.reader-error.reader-periodic-decimal-empty-block
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/numeric-literals
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Periodic decimal repeating block cannot be empty
;; TEST-ATOM: atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Periodic decimal repeating block cannot be empty
;; TEST-READER-PATH: reader.c:1605 lexer.periodic-decimal
;; TEST-CODEGEN-PATH: diagnostic.lexer.periodic-decimal
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1605 Periodic decimal repeating block cannot be empty
;; TEST-USES-ATOM: atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.lexer.periodic.decimal
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-MENU-PATH: codegen/errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-ATOM-LEAF: atom.reader.error.reader.periodic.decimal.empty.block
;; TEST-CLI-TARGET: codegen errors reader numeric-literals

(module Main)
(show 0.())
